--- a/index.html
+++ b/index.html
@@ -20,17 +20,23 @@
 					<h1>Erick Modesto Campos</h1>
 					<h5>Estudante de mestrado</h5>
 					<h3>Universidade Federal do Pará</h3>
-					<a href="http://www.github.com/ErickCampos" target="_blank" title="Github">
+					<a href="https://www.github.com/ErickCampos" target="_blank" title="Github">
 						<i class="fa fa-github" style="font-size:24px;color:green"></i>
 					</a>
 
-					<a href="http://www.github.com/ErickCampos" target="_blank" title="Gitlabb">
+					<a href="https://www.github.com/ErickCampos" target="_blank" title="Gitlab">
 						<i class="fa fa-gitlab" style="font-size:24px;color:green"></i>
 					</a>
 
-					<a href="http://www.github.com/ErickCampos" target="_blank" title="Lattes">
+					<a href="https://www.linkedin.com/in/erick-modesto-campos/" target="_blank" title="Linkedin">
+						<i class="fa fa-linkedin" style="font-size:24px;color:green"></i>
+					</a>
+
+					<a href="http://lattes.cnpq.br/9566244868798202" target="_blank" title="Lattes">
 						<i class="ai ai-lattes big-icon" style="font-size:24px;color:green"></i>
 					</a>
+
+					
 
 
 				</div>
@@ -55,28 +61,54 @@
 					</div>
 
 					<div class="noticias">
-						<h2>Erick</h2>
+						<h2>Experiências</h2>
 						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
 						</p>
 					</div>
 
-				</div>
+				</div><!-- conteudos-->
 
 				<div id="right"> <!-- skill-->
-						<a href="https://www.google.com/maps/place/R.+Santa+Madalena,+365+-+Icu%C3%AD-Guajara,+Ananindeua+-+PA,+67125-044/@-1.3426736,-48.4007506,17z/data=!3m1!4b1!4m5!3m4!1s0x92a45fd571376979:0xf5d0cb19018eb2a8!8m2!3d-1.3426736!4d-48.3985619" target="_blank" title="Github">
-						<i class="fa fa-github" style="font-size:24px;color:green"></i> Ananindeua, Pará
-						<i class="far fa-map-marker-check" style="font-size:24px;color:black"></i>
-						</a>
 
+					<div class="secundario">
+						<a href="https://www.google.com/maps/place/R.+Santa+Madalena,+365+-+Icu%C3%AD-Guajara,+Ananindeua+-+PA,+67125-044/@-1.3426736,-48.4007506,17z/data=!3m1!4b1!4m5!3m4!1s0x92a45fd571376979:0xf5d0cb19018eb2a8!8m2!3d-1.3426736!4d-48.3985619" target="_blank" title="Maps">
+						<i class="fa fa-map-marker" style="font-size:24px;color:green"></i> Ananindeua, Pará
+						</a><br>
+						<i class="fa fa-envelope" style="font-size:18px;color:green;padding: 10px 0px 5px 1px"></i> erick.c.modesto@gmail.com
+					</div>	
+
+					<div class="secundario">
+						<h2 style="margin-bottom: 10px">Formação</h2>
+						<i class="fa fa-graduation-cap"></i>MSc. Ciência da computação <h6 style="color: gray; margin-bottom: 10px;">Universidade Federal do Pará (2019-Atual)</h6>
+						<i class="fa fa-graduation-cap"></i>BSc. Engenharia da computação <h6 style="color: gray">Universidade Federal do Pará (2014-2018)</h6>
+					</div>	
+
+					<div class="secundario">
+						<h2 style="margin-bottom: 10px">Idiomas</h2>
+						<strong>Protuguês</strong>: <h4>nativo</h4> 	
+						<strong>Inglês</strong>: <h4 style="display: inline; color: gray;">intermediário</h4> 
+					</div>	
 						
 
-				</div>
+					<div class="secundario">
+						<h1>Habilidades</h1>
+						<p>C/C++, </p>
+ 						 <div class="skills c">85%</div>
+ 						 <p>Python</p>
+ 						 <div class="skills python">60%</div>
+ 						 <p>Java</p>
+ 						 <div class="skills python">60%</div>
+ 						 <p>HTML5, CSS3</p>
+ 						 <div class="skills html">70%</div>
+					</div>	
+
+				</div><!-- skill-->
 
 
 
 
 				<div class="limpa" id="rodape">
-					ok
+					&copy Copyright 2020 Erick Modesto Campos
 				</div>
 
 			</div>
